# crazyswarm2

crazyflie/config/: crazyflies.yaml
crazyflie_project/: CMakeLists.txt  package.xml
